[package]
name = "ho-api-rust-sdk"
version = "1.0.0"
edition = "2021"
authors = ["禾禾奇趣屋"]
description = "禾禾奇趣屋开放API Rust SDK"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/my_library"
documentation = "./README.md"


[dependencies]
aes = "0.7"
block-modes = { version = "0.8", features = ["alloc"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9.0"
rand = "0.8"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }
hex = "0.4.3"
